--- a/style.css
+++ b/style.css
@@ -1132,7 +1132,7 @@ button:hover{
         right: 0;
         position: absolute;
         width: 100%;
-        height: 75vh;
+        height: 100%;
         display: block;
         color: white;
         align-items: center;
